<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">curupirasrage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_jogo">Curupira\'s Rage</string>
    <string name="subtitulo_jogo">Welcome to the Jungle!</string>
    <string name="btn_novo_jogo">Novo jogo</string>
    <string name="btn_dificuldade">Dificuldade</string>
    <string name="btnFacil">EASY</string>
    <string name="btnNormal">NORMAL</string>
    <string name="btnDificil">HARD</string>
    <string name="title_activity_dificuldade">DificuldadeActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="cacador">Caçador</string>
    <string name="title_activity_fim">FimActivity</string>
    <string name="msgFinal">FIM DE JOGO !</string>
    <string name="pontuacao">Sua pontuação foi: </string>
    <string name="menu_principal">Retornar ao Menu Principal</string>

</resources>
