<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curupira_hd_002"
    tools:context="com.curupirasrage.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/titulo_jogo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffff8800"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitulo_jogo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff99cc00"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_novo_jogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_dificuldade"
        android:layout_alignRight="@+id/btn_dificuldade"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="170dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/btn_novo_jogo" />

    <Button
        android:id="@+id/btn_dificuldade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_novo_jogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/btn_dificuldade"
        android:background="@android:drawable/btn_default"
        />
    
</RelativeLayout>
